--- a/npoi-tests.csproj
+++ b/npoi-tests.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>npoi_tests</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 </Project>
