log4net Logging enabled

--- a/npoi-tests.csproj
+++ b/npoi-tests.csproj
@@ -4,9 +4,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>npoi_tests</RootNamespace>
+    <AppConfig>App.config</AppConfig>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
